--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-   
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <div class="header__logo">
+                    <a href="#" class="header__logo">
+                        <img src="img/header_logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button">заказать звонок</button>
+                </div>
+            </header>
+        </div>
+    </div>
 </body>
 </html>
