--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,35 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
+
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="img/promo/time-icon.png" alt="">
+                        Время подбора:
+                        10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="img/promo/delivery-icon.png" alt="">
+                        Бесплатная
+                        доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="img/promo/questions-icon.png" alt="">
+                        Ответим
+                        на все вопросы
+                    </div>
+                </div>
+                <button class="button button_main">заказать КОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
+            
         </div>
     </div>
 </body>
