--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,39 @@
             
         </div>
     </div>
+
+    <div class="about">
+        <div class="container">
+            <div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
+            <div class="about__wrapper">
+                <div class="about__item">
+                    <img src="img/about/about-1.png" alt="">
+                    <div class="about__subtitle">Делимся опытом</div>
+                    <div class="about__descr">
+                        Наши сотрудники всегда готовы поделиться своим опытом, 
+                        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="about__item">
+                    <img src="img/about/about-2.png" alt="">
+                    <div class="about__subtitle">Заботимся о здоровье</div>
+                    <div class="about__descr">
+                        Мы работаем для того, 
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="about__item">
+                    <img src="img/about/about-3.png" alt="">
+                    <div class="about__subtitle">Учим бегать</div>
+                    <div class="about__descr">
+                        Помогаем с обучением 
+                        правильной технике бега! 
+                        Дружим с крупнейшей школой бега в России - 
+                        <a href="#">I LOVE RUNNING.</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
