replaced the div with a section, added slider img, added files slick.css, slick.min.js

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <div class="header__logo">
@@ -56,9 +56,9 @@
             </div>
             
         </div>
-    </div>
+    </section>
 
-    <div class="about">
+    <section class="about">
         <div class="container">
             <div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="about__wrapper">
@@ -90,9 +90,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="consultation">
+    <section class="consultation">
         <div class="container">
             <div class="consultation__wrapper">
                 <h2 class="title title_white">Получите бесплатную консультацию<br>
@@ -109,6 +109,6 @@
                 </form>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
