--- a/src/index.html
+++ b/src/index.html
@@ -450,6 +450,21 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430481195992!2d37.644807315931104!3d55.76839498055754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1613138999830!5m2!1sru!2sru" width="100%" height="630" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        <div class="footer__info">
+            <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+            <a href="tel:74999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <div class="footer__link">
+                <a href="#" class="footer__link-item"><img src="img/footer/facebook.png" alt="facebook"></a>
+                <a href="#" class="footer__link-item"><img src="img/footer/instagram.png" alt="instagram"></a>
+                <a href="#" class="footer__link-item"><img src="img/footer/pinterest.png" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
