added file jquery.validate.min.js and added id for consultation form

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
                 <div class="consultation__description">Просто заполните форму заявки<br>
                     и мы перезвоним вам в течении 10 минут</div>
     
-                <form action="#" class="form-feed">
+                <form action="#" id="consultation-form" class="form-feed">
                     <input require placeholder="Ваше имя" type="text">
                     <input require placeholder="Ваш телефон" type="number">
                     <input require placeholder="Ваш E-mail" type="email">
@@ -503,6 +503,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
