--- a/src/index.html
+++ b/src/index.html
@@ -102,10 +102,10 @@
                 <div class="consultation__description">Просто заполните форму заявки<br>
                     и мы перезвоним вам в течении 10 минут</div>
     
-                <form action="#" id="consultation-form" class="form-feed">
-                    <input require placeholder="Ваше имя" type="text">
-                    <input require placeholder="Ваш телефон" type="number">
-                    <input require placeholder="Ваш E-mail" type="email">
+                <form action="#" id="consultation-form" class="feed-form">
+                    <input name="name" required placeholder="Ваше имя" type="text">
+                    <input name="phone" required placeholder="Ваш телефон" type="number">
+                    <input name="email" required placeholder="Ваш E-mail" type="email">
                     <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
                 </form>
             </div>
@@ -471,10 +471,10 @@
             <div class="modal__close">&times;</div>
             <div class="modal__title">Просто заполните форму заявки</div>
             <div class="modal__subtitle">и мы перезвоним вам в течении 10 минут</div>
-            <form action="#" class="form-feed form-feed_margin">
-                <input require placeholder="Ваше имя" type="text">
-                <input require placeholder="Ваш телефон" type="number">
-                <input require placeholder="Ваш E-mail" type="email">
+            <form action="#" class="feed-form feed-form_margin">
+                <input name="name" placeholder="Ваше имя" type="text">
+                <input name="phone" placeholder="Ваш телефон" type="number">
+                <input name="email" placeholder="Ваш E-mail" type="email">
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
@@ -483,10 +483,10 @@
             <div class="modal__close">&times;</div>
             <div class="modal__title">Ваш заказ:</div>
             <div class="modal__subtitle">Пульсометр Polar FT1</div>
-            <form action="#" class="form-feed form-feed_margin">
-                <input require placeholder="Ваше имя" type="text">
-                <input require placeholder="Ваш телефон" type="number">
-                <input require placeholder="Ваш E-mail" type="email">
+            <form action="#" class="feed-form feed-form_margin">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
                 <button class="button button_submit">купить</button>
             </form>
         </div>
