created pageup scroll

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <div class="header__logo">
@@ -496,10 +496,12 @@
             <div class="modal__close">&times;</div>
             <div class="modal__title">Спасибо за вашу заявку!</div>
             <div class="modal__subtitle">Наш менеджер свяжется с вами в ближайшее время!</div>
-        </div>
-
-        
+        </div>   
     </div>
+    
+    <a href="#up" class="pageup">
+        <img src="img/arrow-up.svg" alt="up">
+    </a>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
