added animation.sass and animated about block

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
             <div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="about__wrapper">
                 <div class="about__item">
-                    <img src="img/about/about-1.png" alt="">
+                    <img src="img/about/about-1.png" alt="" class="about__img">
                     <div class="about__subtitle">Делимся опытом</div>
                     <div class="about__descr">
                         Наши сотрудники всегда готовы поделиться своим опытом, 
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="about__item">
-                    <img src="img/about/about-2.png" alt="">
+                    <img src="img/about/about-2.png" alt="" class="about__img_animated">
                     <div class="about__subtitle">Заботимся о здоровье</div>
                     <div class="about__descr">
                         Мы работаем для того, 
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="about__item">
-                    <img src="img/about/about-3.png" alt="">
+                    <img src="img/about/about-3.png" alt="" class="about__img">
                     <div class="about__subtitle">Учим бегать</div>
                     <div class="about__descr">
                         Помогаем с обучением 
